# boblight-for-enigma2

./: Makefile  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  client.cpp  configuration.cpp  configuration.h  main.cpp
src/.deps/: boblight-enigma2.Po  client.Po  condition.Po  configuration.Po  daemonize.Po  device.Po  deviceambioder.Po  devicedioder.Po  deviceibelight.Po  devicelightpack.Po  deviceltbl.Po  devicepopen.Po  devicers232.Po  flagmanager-enigma2.Po  flagmanager.Po  grabber-enigma2.Po  libboblight_la-boblight.Plo  libboblight_la-boblight_client.Plo  libboblight_la-messagequeue.Plo  libboblight_la-misc.Plo  libboblight_la-modp_numtoa.Plo  libboblight_la-tcpsocket.Plo  light.Po  log.Po  main.Po  messagequeue.Po  misc.Po  modp_numtoa.Po  mutex.Po  serialport.Po  signaltimer.Po  tcpsocket.Po  thread.Po  threading.Po  timer.Po  timeutils.Po
src/clients/: flagmanager.cpp  flagmanager.h
src/clients/boblight-enigma2/: boblight-enigma2.cpp  flagmanager-enigma2.cpp  flagmanager-enigma2.h  grabber-enigma2.cpp  grabber-enigma2.h
src/clients/boblight-enigma2/include/: rgbtables.inc
src/device/: device.cpp  device.h  devicelightpack.cpp
src/lib/: boblight-functions.h  boblight.cpp  boblight_client.cpp  boblight_client.h
src/util/: threading.cpp  threading.h
